--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "req-repl",
-  "version": "0.0.0",
-  "description": "Request-Replay",
+  "name": "workman",
+  "version": "0.0.1",
+  "description": "A simple command handler",
   "main": "./lib/index.js",
   "scripts": {
     "test": "mocha --recursive --colors ./tests/"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/abdula/req-repl"
+    "url": "https://github.com/abdula/workman"
   },
   "devDependencies": {
     "mocha": "~1.18.2",
     "should": "~3.3.1"
   },
   "keywords": [
-    "req-repl",
-    "message",
-    "event",
-    "handler"
+    "command",
+    "hook",
+    "action",
+    "invoker",
+    "aop",
+    "decoupled"
   ],
   "author": "Ivan Maksymenko ivanmaximenko@gmail.com",
   "bugs": {
-    "url": "https://github.com/abdula/req-repl/issues"
+    "url": "https://github.com/abdula/workman/issues"
   },
-  "homepage": "https://github.com/abdula/req-repl",
+  "homepage": "https://github.com/abdula/workman",
   "dependencies": {
   }
 }
